--- a/templatepage.html
+++ b/templatepage.html
@@ -27,15 +27,38 @@
             <div class="navdiv">
                 <div class="logo"><a href="homepage.html">LOGO</a></div>
                 <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">History</a></li>
-                    <li><a href="#">Culture</a></li>
-                    <li><a href="#">Temple</a></li>
-                    <li><a href="#">Travel</a></li>
+                    <li><a href="aboutpage.html">About</a></li>
+                    <li><a href="historypage.html">History</a></li>
+                    <li><a href="culturepage.html">Culture</a></li>
+                    <li><a href="templepage.html">Temple</a></li>
+                    <li><a href="travelpage.html">Travel</a></li>
                 </ul>
+                <div class="search"><a href="#">Search</a></div>
             </div>
         </nav>
+
+        <h1> DISCOVER BAGAN</h1>
+
+
+
+
             
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
