--- a/templatepage.html
+++ b/templatepage.html
@@ -2,7 +2,11 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
-        <title>Page Name</title>
+
+        <meta charset="UTF-8">
+        <meta name="viewport"
+        content="width=device-width, initial -scale =1.0">
+        <title>Template Page</title>
 
         <style>
             .navdiv{
@@ -10,11 +14,13 @@
                 justify-content: space-between;
                 align-items: center;
                 flex-wrap: wrap;
+
             }
 
             .navlinks li{
                 display: inline-block;
                 padding: 0px 20px;
+
             }
 
             .titlecontent{
@@ -27,6 +33,10 @@
                 display: flex;
                 align-items: center;
             }
+            
+            a{
+                text-decoration: none;
+            }
         </style>
 
     </head>
@@ -36,7 +46,7 @@
 
 
             <div class="navdiv">
-                <div class="logo"><a href="homepage.html">VOYAGE</a></div>
+                <div class="logo"><a href="homepage.html"><h1>VOYAGE</h1></a></div>
                 <div class="navlinks">
                 <ul>
                     <li><a href="aboutpage.html">About</a></li>
