--- a/templatepage.html
+++ b/templatepage.html
@@ -14,17 +14,30 @@
                 margin: 0;
                 
             }
+
+            .header{
+                min-height: 100vh;
+                width: 100%;
+                background-image: linear-gradient(rgba(117, 120, 66, 0.7), rgba(28, 34, 58, 0.065)), url(imagesfile/Bagan.jpg);
+                background-position: center;
+                background-size: cover;
+                position: relative;                
+
+            }
+   
             .navdiv{
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
                 flex-wrap: wrap;
 
+
             }
 
             .navlinks li{
                 display: inline-block;
                 padding: 0px 20px;
+                color: white;
 
             }
 
@@ -41,6 +54,8 @@
             
             a{
                 text-decoration: none;
+                color: white;
+                font-size: 20px;
             }
 
             .about{
@@ -60,6 +75,8 @@
 
 
     <body>
+
+        <div class="header">
 
 
             <div class="navdiv">
@@ -84,10 +101,10 @@
         </div>
 
             <div class="backgroundimage">
-                <img src="imagesfile/Bagan.jpg"style="width: 100%;">
+                <!-- <img src="imagesfile/Bagan.jpg"style="width: 100%;"> -->
              </div>
         </div>
-
+        </div>
         <hr>
 
 
