--- a/homepage.html
+++ b/homepage.html
@@ -7,7 +7,7 @@
         <meta charset="UTF-8">
         <meta name="viewport"
         content="width=device-width, initial -scale =1.0">
-        <title>Template Page</title>
+        <title>DISCOVER Bagan</title>
 
         <style>
         
