--- a/historypage.html
+++ b/historypage.html
@@ -10,16 +10,17 @@
         <title>History</title>
 
         <style>
-            .header{
+            .header {
     min-height: 100vh;
     width: 100%;
     background-image: linear-gradient(rgba(52, 53, 39, 0.11),
      rgba(7, 9, 15, 0.418)), url(imagesfile/BaganErapaintingofThingyan.jpg);
     background-position: center;
     background-size: cover;
-    position: relative;                
+    position: relative;
+            }
 
-}
+
 
 
         </style>
@@ -51,12 +52,17 @@
             <div class="titlecontent">
 
             <div class="heading">    
-            <h1>DISCOVER BAGAN</h1>
+            <h1>HISTORY OF BAGAN</h1>
         </div>
 
         </div>
 
         </div>
+
+
+
+
+
 
         </body>
     
