--- a/templatepage.html
+++ b/templatepage.html
@@ -153,7 +153,16 @@
     <div class="col">
         <div class="logo"><a href="homepage.html"><h1>VOYAGE</h1></a></div>
 
-        <div class="col"></div>
+        <div class="col">
+            <h2>Explore</h2>
+            <a href="homepage.html"><p>Home</p></a>
+            <a href="aboutpage.html"><p>About</p></a>
+            <a href="historypage.html"><p>History</p></a>
+            <a href="culturepage.html"><p>Culture</p></a>
+            <a href="templepage.html"><p>Temples</p></a>
+            <a href="travelpage.html"><p>Travel Tips</p></a>
+
+        </div>
         <div class="col"></div>
         <div class="col"></div>
     </div>
