Restarting on Footer 16/06/25
It doesn't look good, Try to restart on designing the footer

--- a/templatepage.html
+++ b/templatepage.html
@@ -151,21 +151,17 @@
 <!-- footer content -->
 <div class="row">
     <div class="col">
-        <div class="logo"><a href="homepage.html"><h1>VOYAGE</h1></a></div>
-
-        <div class="col">
-            <h2>Explore</h2>
-            <a href="homepage.html"><p>Home</p></a>
-            <a href="aboutpage.html"><p>About</p></a>
-            <a href="historypage.html"><p>History</p></a>
-            <a href="culturepage.html"><p>Culture</p></a>
-            <a href="templepage.html"><p>Temples</p></a>
-            <a href="travelpage.html"><p>Travel Tips</p></a>
-
-        </div>
-        <div class="col"></div>
-        <div class="col"></div>
+        <img src="imagesfile/Logodesignpng.png" class="logo">
+        <p>Lorem ipsum dolor sit amet. 
+            Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
+            Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
+            Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
+            Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!</p>
     </div>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+
 </div>
     </footer>
 </html>
