--- a/homepage.html
+++ b/homepage.html
@@ -7,7 +7,7 @@
         <meta charset="UTF-8">
         <meta name="viewport"
         content="width=device-width, initial -scale =1.0">
-        <title>Template Page</title>
+        <title>Discover Bagan</title>
 
         <style> 
         .header{
@@ -159,13 +159,23 @@
             Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!</p>
     </div>
     <div class="col">
-        <h3>Title</h3>
+        <h2>Title</h2>
         <p>>Lorem ipsum dolor</p>
         <p>Vel veniam earum sed incidunt rerum</p>
         <p>Qui laboriosam adipisci </p>
         <p class="email-id">pch22008@my.hghs.school.nz</p>
     </div>
-    <div class="col"></div>
+    <div class="col">
+        <h2>Explore</h2>
+        <uL>
+            <li><a href="homepage.html">Discover Bagan</a></li>
+            <li><a href="aboutpage.html">About Us</a></li>
+            <li><a href="historypage.html">History Of Bagan</a></li>
+            <li><a href="culturepage.html">Culture Of Bagan</a></li>
+            <li><a href="templepage.html">Temples In Bagan</a></li>
+            <li><a href="travelpage.html">Travel Tips</a></li>
+        </uL>
+    </div>
     <div class="col"></div>
 
 </div>
