--- a/homepage.html
+++ b/homepage.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
+        <script src="https://kit.fontawesome.com/abd7cf25bc.js" crossorigin="anonymous"></script>
 
 
         <meta charset="UTF-8">
@@ -166,7 +167,9 @@
         <p class="email-id">pch22008@my.hghs.school.nz</p>
     </div>
     <div class="col">
+        
         <h2>Explore</h2>
+        <div class="subcol">
         <uL>
             <li><a href="homepage.html">Discover Bagan</a></li>
             <li><a href="aboutpage.html">About Us</a></li>
@@ -176,7 +179,12 @@
             <li><a href="travelpage.html">Travel Tips</a></li>
         </uL>
     </div>
-    <div class="col"></div>
+</div>
+    <div class="social-icons">
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-x-twitter"></i>
+        <i class="fa-solid fa-envelope"></i>
+    </div>
 
 </div>
     </footer>
