26/06 Completed the footer design
I added the footer with all my element.
I added the animation to the footer.
I still need to fix the link on explore section of footer and social meida icons.
I still need to make my footer responsive.

--- a/homepage.html
+++ b/homepage.html
@@ -160,7 +160,7 @@
             Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!</p>
     </div>
     <div class="col">
-        <h2>Title</h2>
+        <h2>Title <div class="underline"><span></span></div></h2>
         <p>>Lorem ipsum dolor</p>
         <p>Vel veniam earum sed incidunt rerum</p>
         <p>Qui laboriosam adipisci </p>
@@ -168,7 +168,7 @@
     </div>
     <div class="col">
         
-        <h2>Explore</h2>
+        <h2>Explore <div class="underline"><span></span></div></h2>
         <div class="subcol">
         <uL>
             <li><a href="homepage.html">Discover Bagan</a></li>
@@ -187,5 +187,8 @@
     </div>
 
 </div>
+
+<hr>
+<p class="copyright">Voyage © 2025 - All Rights Reserved</p>
     </footer>
 </html>
