fixing up the homepage which is topics section and brief section
I changed the images into round edges and fixing alignment and layout

--- a/homepage.html
+++ b/homepage.html
@@ -23,7 +23,7 @@
             position: relative;
         
         }
-            .homepage-about{
+            /* .homepage-about{
                 background-color: white;
                 display: flex;
                 justify-content: space-between;
@@ -42,14 +42,14 @@
                 justify-content: center;
                 flex-wrap: wrap;
                 margin-top: 100px;
-            }
+            } */
         </style>
 
     </head>
 
 
     <body>
-<!-- Navigation bar -->
+<!-- Header and Navigation bar -->
         <div class="header">
             <div class="navdiv">
                 <div class="logo"><a href="homepage.html"><h1>VOYAGE</h1></a></div>
@@ -111,14 +111,14 @@
 
   <!-- 1st row: HISTORY & CULTURE -->
   <div class="row-of-cards">
-    <div class="homepage-card" data-aos="zoom-in" data-aos-delay="100">
+    <div class="homepage-card">
       <img src="imagesfile/BaganErapaintingofThingyan.jpg" alt="History">
       <div class="card-content">
         <a href="historypage.html" class="homepagebutton">HISTORY</a>
       </div>
     </div>
 
-    <div class="homepage-card" data-aos="zoom-in" data-aos-delay="100">
+    <div class="homepage-card">
       <img src="imagesfile/puppets.jpg" alt="Culture">
       <div class="card-content">
         <a href="culturepage.html" class="homepagebutton">CULTURE</a>
@@ -128,14 +128,14 @@
     
    <!-- 2nd row: TRAVEL & TEMPLES -->
   <div class="row-of-cards">
-    <div class="homepage-card" data-aos="zoom-in" data-aos-delay="100">
+    <div class="homepage-card">
       <img src="imagesfile/transport - Copy.jpg" alt="Travel">
       <div class="card-content">
         <a href="travelpage.html" class="homepagebutton">TRAVEL</a>
       </div>
     </div>
 
-    <div class="homepage-card" data-aos="zoom-in" data-aos-delay="100">
+    <div class="homepage-card" >
       <img src="imagesfile/templeimg1 - Copy.jpg" alt="Temples">
       <div class="card-content">
         <a href="templepage.html" class="homepagebutton">TEMPLES</a>
