--- a/homepage.html
+++ b/homepage.html
@@ -50,6 +50,7 @@
 
 
     <body>
+
 <!-- Header and Navigation bar -->
         <div class="header">
             <div class="navdiv" data-aos="fade-down" data-aos-duration="3000">
@@ -64,7 +65,20 @@
                 </ul>
 
             </div>
-                <div class="search"><a href="#">Search</a></div>
+                <!-- <div class="search"><a href="#">Search</a></div> -->
+
+<!-- search bar -->
+<button class="openbtn" onclick="">Open Search Box</button>
+      <div class="search">
+        <div class="search-content">
+          <form>
+            <input type="text" name="search" placeholder="Search...">
+            <button type="sumbit"><i class="fa fa-search"></i></button>
+          </form>
+        </div>
+        <span class="closebtn" onclick="" class="" title="close">X</span>
+      </div>
+
             </div>
 
 
@@ -201,6 +215,12 @@
       <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init();
+  </script>
+
+  <script>
+    function openSearch(){
+      document.getElementById("").style.display="block";
+    }
   </script>
 
     </body>
