Adding more Temple Photos and Updating styling on Temple Page.
- I style the text and images on the temple page by using css.

- I added more temple images to the project.

--- a/templepage.html
+++ b/templepage.html
@@ -74,14 +74,14 @@
 
 <section class="temple-section">
 
-    <h1>Thatbyinnyu Temple</h1>
+    <h1>Architecture of Bagan</h1>
     <p class="subheading">Lorem ipsum dolor sit amet. Vel veniam earum</p>
 
     <!-- Temple Main Gallery -->
     <div class="temple-gallery">
-        <img src="imagesfile/" alt="Thatbyinnyu Temple View 1">
-        <img src="imagesfile/" alt="Thatbyinnyu Temple View 2">
-        <img src="imagesfile/" alt="Thatbyinnyu Temple View 3">
+        <img src="imagesfile/thewallsofthatbyinnyutemple.jpg" alt="Thatbyinnyu Temple View 1">
+        <img src="imagesfile/Temple_n_trees.jpg" alt="Thatbyinnyu Temple View 2">
+        <img src="imagesfile/pexels-lee-sheng-dan-25738568-13798001.jpg" alt="Thatbyinnyu Temple View 3">
     </div>
 
     <p>Lorem ipsum dolor sit amet. Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. Ea culpa alias et facere distinctio est quod similique ea voluptate quis et reprehenderit consequuntur.</p>
