Updated to Temple page
I added context paragraph of different type of temple

--- a/templepage.html
+++ b/templepage.html
@@ -84,7 +84,12 @@
         <img src="imagesfile/pexels-lee-sheng-dan-25738568-13798001.jpg" alt="Thatbyinnyu Temple View 3">
     </div>
 
-    <p>Lorem ipsum dolor sit amet. Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. Ea culpa alias et facere distinctio est quod similique ea voluptate quis et reprehenderit consequuntur.</p>
+    <p>“The temples in Bagan were primarily constructed using fired bricks and mud-based mortars with vegetal binders; some structures of temples are also incorporating sandstone for reinforcement.”
+        Golden temples are built using a combination of materials, with the use of gold leaf, diamonds, and rubies to cover brick and copper structures.
+        
+        There are 2 main architectural styles used in building temples in Bagan. They both took their influence from early Pya people’s constructions in India and Sri Lanka (Ceylon), and they represent Mount Meru in the Buddhist cosmos.
+        Stupa-style (Solid temples) are bell-shaped with one or more rectangular terraces at the base. They contain a relic chamber. 
+        </p>
 
     <hr class="wavy-line">
 
@@ -98,7 +103,9 @@
         <img src="imagesfile/" alt="Thatbyinnyu Temple View 3">
     </div>
 
-    <p>Lorem ipsum dolor sit amet. Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat.</p>
+    <p>Gu-style (hollow temples) have a vaulted indoor chamber and point arches. his technique of vaulting is thought to have been developed in Bagan in the 11th century.
+        The vaulting technique is the use of brick vaulting and point arches, which were developed in Bagan in the 11th century. It was an innovative structure at that period of time however, it was lost in the later eras. 
+        </p>
 
     <hr class="wavy-line">
 
