Adding Festival section On Cultural Page
Adding the festival section on the cultural page. I have not finish yet. I need to adjust the aesthetic by css.

--- a/culturepage.html
+++ b/culturepage.html
@@ -73,9 +73,73 @@
         </div>
 
 
-        <footer data-aos="fade-up" data-aos-duration="3000">
+        <!-- Festival Section -->
+<section class="fesival-section">
+  <h2 class="cultural-page-title">Festivals</h2>
+  <p class="cultural-subtitle">An insight into the incredible experiencce in Bagan</p>
+
+  <div class="festival-Gallery"></div>
+  <div class="festival-card">
+    <img src="imagesfile/Lighting_Festival.jpg" alt="LightingFestival">
+    <p class="image-credit">My Description of the Image <br>
+      <span class="credit">By Aung Myint Htwe - Own work, CC BY-SA 4.0, <a href="https://commons.wikimedia.org/w/index.php?curid=72920218">On Wikimedia Commons</a></span>
+    </p>
+    <h3>Lighting Festival</h3>
+    <p>Lorem ipsum dolor sit amet. 
+      Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
+      Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
+      Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
+      Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!
+      Lorem ipsum dolor sit amet. 
+      Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
+      Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
+      Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
+      Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!</p>
+  </div>
+
+  <div class="festival-card">
+    <img src="imagesfile/Lighting_Festival.jpg" alt="LightingFestival">
+    <p class="image-credit">My Description of the Image <br>
+      <span class="credit">By Name - Own work, CC BY-SA 4.0, <a href="#">On Wikimedia Commons</a></span>
+    </p>
+    <h3>SHWEZIGON FESTIVAL</h3>
+    <p>Lorem ipsum dolor sit amet. 
+      Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
+      Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
+      Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
+      Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!
+      Lorem ipsum dolor sit amet. 
+      Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
+      Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
+      Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
+      Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!</p>
+  </div>
+
+  <div class="festival-card">
+    <img src="imagesfile/Lighting_Festival.jpg" alt="LightingFestival">
+    <p class="image-credit">My Description of the Image <br>
+      <span class="credit">By Name - Own work, CC BY-SA 4.0, <a href="#">On Wikimedia Commons</a></span>
+    </p>
+    <h3>WATER FESTIVAL</h3>
+    <p>Lorem ipsum dolor sit amet. 
+      Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
+      Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
+      Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
+      Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!
+      Lorem ipsum dolor sit amet. 
+      Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
+      Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
+      Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
+      Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!</p>
+  </div>
+
+  </div>
+</section>
+
 
 <!-- footer content -->
+<footer data-aos="fade-up" data-aos-duration="3000">
+
 <div class="row">
     <div class="col">
         <img src="imagesfile/Logodesignpng.png" class="logo">
