Updating The culture page to hae arow of image on festival section.
Updating The culture page to hae arow of image on festival section.. The code is not still wokring

--- a/culturepage.html
+++ b/culturepage.html
@@ -78,7 +78,7 @@
   <h2 class="cultural-page-title">Festivals</h2>
   <p class="cultural-subtitle">An insight into the incredible experiencce in Bagan</p>
 
-  <div class="festival-Gallery"></div>
+  <div class="festival-gallery"></div>
   <div class="festival-card">
     <img src="imagesfile/Lighting_Festival.jpg" alt="LightingFestival">
     <p class="image-credit">My Description of the Image <br>
@@ -95,9 +95,43 @@
       Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
       Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
       Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!</p>
+
+      <img src="imagesfile/Lighting_Festival.jpg" alt="LightingFestival">
+    <p class="image-credit">My Description of the Image <br>
+      <span class="credit">By Name - Own work, CC BY-SA 4.0, <a href="#">On Wikimedia Commons</a></span>
+    </p>
+    <h3>SHWEZIGON FESTIVAL</h3>
+    <p>Lorem ipsum dolor sit amet. 
+      Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
+      Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
+      Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
+      Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!
+      Lorem ipsum dolor sit amet. 
+      Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
+      Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
+      Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
+      Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!</p>
+
+      <img src="imagesfile/Lighting_Festival.jpg" alt="LightingFestival">
+      <p class="image-credit">My Description of the Image <br>
+        <span class="credit">By Name - Own work, CC BY-SA 4.0, <a href="#">On Wikimedia Commons</a></span>
+      </p>
+      <h3>WATER FESTIVAL</h3>
+      <p>Lorem ipsum dolor sit amet. 
+        Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
+        Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
+        Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
+        Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!
+        Lorem ipsum dolor sit amet. 
+        Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
+        Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
+        Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
+        Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!</p>
+
+
   </div>
 
-  <div class="festival-card">
+  <!-- <div class="festival-card">
     <img src="imagesfile/Lighting_Festival.jpg" alt="LightingFestival">
     <p class="image-credit">My Description of the Image <br>
       <span class="credit">By Name - Own work, CC BY-SA 4.0, <a href="#">On Wikimedia Commons</a></span>
@@ -113,9 +147,9 @@
       Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
       Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
       Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!</p>
-  </div>
+  </div> -->
 
-  <div class="festival-card">
+  <!-- <div class="festival-card">
     <img src="imagesfile/Lighting_Festival.jpg" alt="LightingFestival">
     <p class="image-credit">My Description of the Image <br>
       <span class="credit">By Name - Own work, CC BY-SA 4.0, <a href="#">On Wikimedia Commons</a></span>
@@ -131,7 +165,7 @@
       Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
       Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
       Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!</p>
-  </div>
+  </div> -->
 
   </div>
 </section>
